--- a/main.html
+++ b/main.html
@@ -8,6 +8,29 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="root">
+		<h1>My Playlist</h1>
+		<div id="songsList">
+			<ul>
+				<a href="" target="_blank"><li>Song 1</li></a>
+				<a href="" target="_blank"><li>Song 2</li></a>
+				<a href="" target="_blank"><li>Song 3</li></a>
+				<a href="" target="_blank"><li>Song 4</li></a>
+				<a href="" target="_blank"><li>Song 5</li></a>	
+			</ul>
+		</div>
+		<h2>Now Playing..</h2>
+		<div class="player_one player_two">
+			<video controls>
+				<source src="https://www.w3schools.com/tags/movie.mp4" type="video/mp4">
+			</video>
+			<h2>MP3 songs</h2>
+			<p>Maan meri Jaan</p>
+			<audio controls>
+				<source src="https://www.pagalworld.com.se/files/download/id/64630" type="audio/mpeg">
+			</audio>
+		</div>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
