--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
 				<a href="" target="_blank"><li>Song 5</li></a>	
 			</ul>
 		</div>
-		<h2>Now Playing..</h2>
+		<h2>Now Playing...</h2>
 		<div class="player_one player_two">
 			<video controls>
 				<source src="https://www.w3schools.com/tags/movie.mp4" type="video/mp4">
